tests/paczka1/small_fuzzy/90399679.err
Error in line 2: rQ2E0LAtWoV S982 66,2
Error in line 9: xnCE8 S982 8,2
